--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -8,6 +8,31 @@
   .board-title {
     display: flex;
     gap: 6px;
+    align-items: center;
+
+    .board-title-icon {
+      width: 15px;
+      height: 15px;
+      background-color: blue;
+      border-radius: 50%;
+
+      &.todo {
+        background-color: #49c4e5;
+      }
+      &.doing {
+        background-color: #8471f2;
+      }
+      &.done {
+        background-color: #67e2ae;
+      }
+    }
+
+    h4 {
+      font-size: 12px;
+      font-weight: 700;
+      letter-spacing: 2.4px;
+      color: var(--text-gray);
+    }
   }
 
   .board-column {
