--- a/src/components/CeateTaskModel/CreateTaskModel.scss
+++ b/src/components/CeateTaskModel/CreateTaskModel.scss
@@ -1,78 +1,79 @@
 .model-container {
-    position: fixed;
-    background-color: #00000055;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  background-color: #00000055;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    .model-card {
-        position: relative;
-        background-color: var(--bg-gray);
-        padding: 32px;
-        width: 100%;
-        max-width: 480px;
+  .model-card {
+    position: relative;
+    background-color: var(--bg-gray);
+    padding: 32px;
+    margin: 20px;
+    width: 100%;
+    max-width: 480px;
 
-        .model-close {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-        }
-
-        .model-title {
-            margin-bottom: 20px;
-        }
-
-        label {
-            font-size: 14px;
-            color: var(--text-gray);
-            display: block;
-            margin-bottom: 4px;
-        }
-
-        input,
-        textarea,
-        select {
-            width: 100%;
-            display: block;
-            border-radius: 5px;
-            border: 1px solid var(--bg-lines);
-            background-color: var(--bg-lines);
-            padding: 15px 20px;
-            color: var(--text);
-            outline: none;
-            margin-bottom: 6px;
-            resize: vertical;
-            max-height: 140px;
-
-            &:focus {
-                border-color: var(--primary);
-            }
-        }
-
-        .subtask-container {
-            position: relative;
-
-            svg {
-                width: 16px;
-                height: 16px;
-                top: 3px;
-                right: 3px;
-                cursor: pointer;
-                position: absolute;
-                color: var(--text-gray);
-            }
-        }
-
-        button {
-            border-radius: 8px;
-            width: 100%;
-            padding: 12px 0px;
-            font-size: 16px;
-            font-weight: 600;
-            margin-bottom: 15px;
-        }
+    .model-close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
     }
+
+    .model-title {
+      margin-bottom: 20px;
+    }
+
+    label {
+      font-size: 14px;
+      color: var(--text-gray);
+      display: block;
+      margin-bottom: 4px;
+    }
+
+    input,
+    textarea,
+    select {
+      width: 100%;
+      display: block;
+      border-radius: 5px;
+      border: 1px solid var(--bg-lines);
+      background-color: var(--bg-lines);
+      padding: 15px 20px;
+      color: var(--text);
+      outline: none;
+      margin-bottom: 6px;
+      resize: vertical;
+      max-height: 140px;
+
+      &:focus {
+        border-color: var(--primary);
+      }
+    }
+
+    .subtask-container {
+      position: relative;
+
+      svg {
+        width: 16px;
+        height: 16px;
+        top: 3px;
+        right: 3px;
+        cursor: pointer;
+        position: absolute;
+        color: var(--text-gray);
+      }
+    }
+
+    button {
+      border-radius: 8px;
+      width: 100%;
+      padding: 12px 0px;
+      font-size: 16px;
+      font-weight: 600;
+      margin-bottom: 15px;
+    }
+  }
 }
