--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -20,6 +20,16 @@
     flex: 1;
     align-items: center;
 
+    .navbar-dropdown {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+
+      svg {
+        display: none;
+      }
+    }
+
     h4 {
       font-size: 24px;
     }
@@ -29,6 +39,14 @@
       border-radius: 8px;
       font-size: 17px;
       font-weight: 500;
+    }
+  }
+  @media screen and (max-width: 800px) {
+    .navbar-logo-container {
+      display: none;
+    }
+    .navbar-main-container .navbar-dropdown svg {
+      display: block;
     }
   }
 }
