--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -13,73 +13,7 @@
     font-size: 13px;
     letter-spacing: 2px;
   }
-
-  .sidebar-items {
-    list-style: none;
-
-    li {
-      padding: 15px 30px;
-      margin-right: 20px;
-      border-radius: 0px 15px 15px 0px;
-      font-weight: 700;
-      font-size: 14px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 5px;
-
-      svg {
-        width: 16px;
-        height: 16px;
-      }
-
-      &:hover,
-      &.active {
-        background-color: var(--text-dimmed);
-        color: var(--primary);
-      }
-
-      &:last-child {
-        background-color: transparent;
-        color: var(--primary);
-
-        &:hover {
-          background-color: var(--primary);
-          color: var(--text);
-        }
-      }
-    }
-  }
-
-  form {
-    padding: 0px 25px;
-  }
-
-  input {
-    width: 100%;
-    display: block;
-    border-radius: 5px;
-    border: 1px solid var(--bg-lines);
-    background-color: var(--bg-lines);
-    padding: 6px 15px;
-    color: var(--text);
-    outline: none;
-    margin-bottom: 6px;
-
-    &:focus {
-      border-color: var(--primary);
-    }
-  }
-
-  button {
-    border-radius: 5px;
-    background-color: var(--primary);
-    padding: 6px 5px;
-    border: none;
-    cursor: pointer;
-
-    &:hover {
-      opacity: 0.9;
-    }
+  @media screen and (max-width: 800px) {
+    display: none;
   }
 }
