made dnd better

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -9,6 +9,7 @@
     display: flex;
     gap: 6px;
     align-items: center;
+    margin-bottom: 15px;
 
     .board-title-icon {
       width: 15px;
@@ -38,6 +39,5 @@
   .board-column {
     display: flex;
     flex-direction: column;
-    gap: 15px;
   }
 }
